--- a/package.json
+++ b/package.json
@@ -18,11 +18,19 @@
   "license": "MIT",
   "dependencies": {
     "rxjs": "^7.4.0",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "debug": "^4.3.2"
   },
   "devDependencies": {
+    "@types/debug": "^4.1.7",
     "@types/pg": "^8.6.1",
     "eslint": "^8.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
+    "eslint-config-airbnb-typescript": "^15.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.4.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
