--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
   "dependencies": {
     "rxjs": "^7.4.0",
     "pg": "^8.7.1",
-    "debug": "^4.3.2"
+    "pg-copy-streams": "^6.0.2",
+    "debug": "^4.3.2",
+    "obuf": "^1.1.2"
   },
   "devDependencies": {
+    "@types/obuf": "",
+    "@types/pg-copy-streams": "^1.2.1",
     "@types/debug": "^4.1.7",
     "@types/pg": "^8.6.1",
     "eslint": "^8.2.0",
