--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,9 +13,9 @@
       "removeComments": true,
       "skipLibCheck": true,
       "strictNullChecks": true,
-      "noUnusedLocals": true,
-      "noUnusedParameters": true,
-      "noImplicitReturns": true,
+      "noUnusedLocals": false,
+      "noUnusedParameters": false,
+      "noImplicitReturns": false,
       "forceConsistentCasingInFileNames": true,
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
